2007-04-18  Miklos Szeredi <miklos@szeredi.hu>

	* Use patch from Debian Bug#413403 to fix problems with bash in
	mount.fuse

2007-04-15  Miklos Szeredi <miklos@szeredi.hu>

	* Add -lulockmgr to compilation comment in fusexmp_fh.c

2007-04-05  Miklos Szeredi <miklos@szeredi.hu>

	* mount.fuse should handle spaces in paths.  Debian Bug#417834.
	Reported by Alexander Blazej

	* Use "fusectl" as the device for the fusectl filesystem.  Debian
	Bug#417945.  Reported by Laurent Bonnaud

2007-03-05  Miklos Szeredi <miklos@szeredi.hu>

	* mount.fuse should use /bin/bash.  Debian Bug#413403.  Reported
	by Thomas Weinbrenner

2007-02-26  Miklos Szeredi <miklos@szeredi.hu>

	* Fix detection of installed fuse in init script.  Reported and
	fix suggested by Davide Canova

2007-02-05  Miklos Szeredi <miklos@szeredi.hu>

	* Fix 2.6.9 RHEL kernels, which have compatibility mutex.h, but
	don't define mutex_destroy(), bummer.  Patch from Phil Schwan

	* Fix option parsing in mount.fuse.  Patch from Jens M. Noedler

2007-02-04  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.6.3

2007-02-04  Miklos Szeredi <miklos@szeredi.hu>

	* Compile fuseblk for kernels which don't have an option to turn
	off the block layer (CONFIG_BLOCK).  Reported by Szakacsits
	Szabolcs

2007-02-02  Miklos Szeredi <miklos@szeredi.hu>

	* Fix regression caused by "Fix possible double lock in certain
	cases if request is interrupted" on 2007-01-19.  Reported by José
	Antonio Sánchez

	* kernel: make it compile on "strange" kernels which have emulated
	mutexes via <linux/mutex.h> but no i_mutex.  Reported by Tomasz
	Mateja

2007-01-30  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.6.2

2007-01-28  Miklos Szeredi <miklos@szeredi.hu>

	* kernel: fix BUG in control filesystem if it is umounted and
	mounted again, while some fuse filesystems are present.
	Bugreport from Florent Mertens

	* kernel: sync with mainline, support 2.6.20

2007-01-22  Miklos Szeredi <miklos@szeredi.hu>
